# PrivaNote

./: .gitignore  .replit  README.md  SETUP.md  app.py  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js
.github/workflows/: build.yml  pr-check.yml
.kiro/specs/privanote-mvp/: design.md  requirements.md  tasks.md
.streamlit/: config.toml
attached_assets/: README_1754510813964.md  content-1754506475327.md  content-1754518459063.md
docs/: CODE_SIGNING.md
project_artifacts/: MVP Scope and Cross-Platform Strategy for Local AI Meeting Note-Taking App.md  Meeting Note-Taking App_ Analysis and Recommendations.md  PrivaNote Pitch Deck Outline.md  PrivaNote_ Your Private AI Meeting Assistant.md
src/main/: main.ts  preload.ts
src/main/services/: AudioCaptureService.ts
src/renderer/: App.tsx  index.html  styles.css
src/renderer/components/: AudioLevelIndicator.tsx  AudioSourceSelector.tsx  ControlPanel.tsx  Header.tsx  PermissionsDialog.tsx  ProgressIndicator.tsx  RecordingControls.tsx  ResultsSection.tsx  StatusIndicator.tsx  TitleBar.tsx  index.ts
src/renderer/services/: EnhancedAudioCapture.ts  WebAudioCapture.ts
utils/: ai_analysis.py  audio_processor.py  audio_recorder.py  export.py  storage.py  transcription.py
