[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11, <3.13"
dependencies = [
    "faster-whisper>=1.2.0",
    "numpy>=2.3.2",
    "ollama>=0.5.2",
    "openai>=1.99.1",
    "pandas>=2.3.1",
    "pydub>=0.25.1",
    "sounddevice>=0.5.2",
    "streamlit>=1.48.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
